[project]
name = "equitriage"
version = "0.1.0"
description = "A Bias-Aware Clinical Priority & Behavioral Dynamics Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio",
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "openenv-core"
]

[project.scripts]
# This points the grader to the main function in your new server/app.py
equitri-server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
